--- a/DSAteste5.ipynb
+++ b/DSAteste5.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN9ZaShRadcP8fYs2stVFu1",
+      "authorship_tag": "ABX9TyPTo7VAP51ICYH1/v3rUqzA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1616,10 +1616,533 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "LAMBDA"
+      ],
+      "metadata": {
+        "id": "_E5c84cl5Y4y"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def potencia(num):\n",
+        "  resultado = num **2\n",
+        "  return resultado"
+      ],
+      "metadata": {
+        "id": "NiUDFQ8z5bZk"
+      },
+      "execution_count": 90,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "potencia(5)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CiTuyi0W5jVD",
+        "outputId": "968bf2ab-1878-4b25-b1c9-eaca6b24b5a2"
+      },
+      "execution_count": 91,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "25"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 91
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def potencia(num):\n",
+        "  return num **2"
+      ],
+      "metadata": {
+        "id": "FbhN5hWV5k9V"
+      },
+      "execution_count": 92,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "potencia(3)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XsWWC-nw5oSm",
+        "outputId": "f34ca97d-d17e-4e77-e619-dbfb16faadd8"
+      },
+      "execution_count": 93,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "9"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 93
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def potencia(num): return num **2"
+      ],
+      "metadata": {
+        "id": "1ebIIEC-5p2D"
+      },
+      "execution_count": 94,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "potencia(4)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Uu1iaXVW5tr1",
+        "outputId": "b40288da-bb99-47d6-feb0-0ff924c9d7cd"
+      },
+      "execution_count": 95,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "16"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 95
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "potencia = lambda num: num **2"
+      ],
+      "metadata": {
+        "id": "gX3vJHkb5xbE"
+      },
+      "execution_count": 96,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "potencia(7)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xQ083u_457Wp",
+        "outputId": "30984e6c-a1b1-4b73-840c-9bdd2391cedf"
+      },
+      "execution_count": 97,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "49"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 97
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Par = lambda x: x%2==0"
+      ],
+      "metadata": {
+        "id": "JLRrSNLK58PG"
+      },
+      "execution_count": 100,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Par(3)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BFjqrij06J0H",
+        "outputId": "2635821c-1929-41f7-fc76-008da93f00f0"
+      },
+      "execution_count": 101,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 101
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Par(6)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zrItNdJ-6K1j",
+        "outputId": "c05caae9-bd22-4c8d-c86d-7c6bfddfa7ca"
+      },
+      "execution_count": 102,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 102
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "first = lambda s: s[0]"
+      ],
+      "metadata": {
+        "id": "lTtPQiUA6Q7m"
+      },
+      "execution_count": 103,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "first('Primeira posição')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "LwdX9Dod6YZF",
+        "outputId": "8ab673d5-90ce-44e6-f9f3-27e3bfcb2191"
+      },
+      "execution_count": 104,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'P'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 104
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "reverso = lambda s: s[::-1]"
+      ],
+      "metadata": {
+        "id": "v5dES7M16bv1"
+      },
+      "execution_count": 105,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "reverso('ao contrario')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "bmUY5_RF6gRD",
+        "outputId": "17b060d9-36f2-4ae9-82dd-716f5c550447"
+      },
+      "execution_count": 107,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'oirartnoc oa'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 107
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "addNum = lambda x,y : x*y"
+      ],
+      "metadata": {
+        "id": "1rAbwUtt6iJj"
+      },
+      "execution_count": 108,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "addNum(2,3)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "308Bms446rsE",
+        "outputId": "1f0d5f29-b47a-47b2-84c1-cad246da80f2"
+      },
+      "execution_count": 109,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "6"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 109
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "[x for x in range(10)]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2WZwiNFs6s9T",
+        "outputId": "00e0d1ef-794d-4969-89f7-4b5feb9ddd6b"
+      },
+      "execution_count": 110,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 110
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lista_numeros = [x for x in range(10) if x < 5]\n",
+        "print(lista_numeros)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LCRL0wHFH-_3",
+        "outputId": "0143fff6-46b6-4abe-9740-1465cd4568ad"
+      },
+      "execution_count": 111,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0, 1, 2, 3, 4]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lista_frutas = [\"banana\", \"abacate\", \"melancia\", \"cereja\", \"manga\"]\n",
+        "nova_lista = []"
+      ],
+      "metadata": {
+        "id": "FmQnuG4nIeRU"
+      },
+      "execution_count": 112,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for x in lista_frutas:\n",
+        "    if \"m\" in x:\n",
+        "        nova_lista.append(x)"
+      ],
+      "metadata": {
+        "id": "gCAhvGx0Ir2U"
+      },
+      "execution_count": 113,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(nova_lista)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LnmOTAgzIvjS",
+        "outputId": "f55f3f53-ef63-4140-9a9f-f49517cd21f3"
+      },
+      "execution_count": 114,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['melancia', 'manga']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nova_lista = [x for x in lista_frutas if \"m\" in x]\n",
+        "print(nova_lista)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eXqz0sDDIzpE",
+        "outputId": "28e4da3e-e88f-45df-d55a-f120233d3c29"
+      },
+      "execution_count": 115,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['melancia', 'manga']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dict_alunos = {'Bob': 68, 'Michel': 84, 'Zico': 57, 'Ana': 93}\n"
+      ],
+      "metadata": {
+        "id": "uDg-E817I18z"
+      },
+      "execution_count": 116,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dict_alunos_status = {k:v for (k, v) in dict_alunos.items()}\n",
+        "print(dict_alunos_status)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "652429XJI-Y1",
+        "outputId": "3adcde5f-6dbe-4b9a-9b73-b0625e48329a"
+      },
+      "execution_count": 119,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'Bob': 68, 'Michel': 84, 'Zico': 57, 'Ana': 93}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dict_alunos_status = {k:('Aprovado' if v > 70 else 'Reprovado') for (k, v) in dict_alunos.items()}\n",
+        "print(dict_alunos_status)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2JPY_qBJI-yy",
+        "outputId": "a51f1dde-2287-4b65-ce44-4655c3dd6c3b"
+      },
+      "execution_count": 120,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'Bob': 'Reprovado', 'Michel': 'Aprovado', 'Zico': 'Reprovado', 'Ana': 'Aprovado'}\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "2P_v2nC14_xE"
+        "id": "GhvUMQGFJRLU"
       },
       "execution_count": null,
       "outputs": []
